Fixes Hover Style on IE8
Applies the same fixes to hover for IE8 as whole and half.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -105,7 +105,13 @@ $stepSizeLarge: 27px;
   &.ddm-rating-widget__step--whole,
   &.ddm-rating-widget__step--half {
     &:after {
-      width: 0%;
+      width: 0;
+    }
+
+    &.ddm-rating-widget__step--hover {
+      &:after {
+        width: 0;
+      }
     }
   }
 }
